--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "todo_react",
-  "homepage": "https://sasdaiv.github.io/todo_react",
+  "name": "todo_react_pet",
+  "homepage": "https://sasdaiv.github.io/todo_react_pet",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
